# cookiecutter-humbletray

./: .coveragerc  .gitignore  cookiecutter.json  main.spec  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/: README.rst  main.py  main.spec  setup.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: main.py
